--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <h1>Senayan Research</h1>
 
         <p>
-            We observe markets, systems, and behavior.<br />
-            We publish selectively.
+            Markets are machines before they are stories.<br />
+            We study where the machinery bends.
         </p>
 
         <p>
