--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         </p>
 
         <p>
-            GitHub: <a href="https://github.com/SenayanResearch" target="_blank">github.com/SenayanResearch</a>
+            LinkedIn: <a href="https://www.linkedin.com/company/senayan-research"
+                target="_blank">https://www.linkedin.com/company/senayan-research</a>
         </p>
 
         <div class="footer">
